:recycle: Refactor: 우리 동네 인기 검색어 리스트 조회 로직 및 JUnit 테스트 코드 추가